# nl2sql

./: .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.web  Makefile  README.md  docker-compose.yml  pyproject.toml
src/nl2sql/: __init__.py  config.py  db.py  models.py
src/nl2sql/api/: app.py  schemas.py
src/nl2sql/api/dependencies/: database.py
src/nl2sql/api/routers/: connectors.py  deployments.py  health.py  inference.py  metrics.py  projects.py  runs.py  train.py
src/nl2sql/cli/: client.py  config.py  main.py
src/nl2sql/connectors/: service.py  utils.py
src/nl2sql/jobs/: queue.py  tasks.py  worker.py
src/nl2sql/metrics/: store.py
src/nl2sql/observability/: __init__.py  log_stream.py  logging.py
src/nl2sql/service/: connectors.py  deployments.py  inference.py  projects.py  snapshots.py  training.py
tests/: conftest.py  test_health.py  test_inference.py  test_schema_overview_format.py  test_schema_snapshot.py
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx  styles.css
web/src/components/: ChatView.tsx  RunLogs.tsx
