[project]
name = "nl2sql"
version = "0.1.0"
description = "Natural language to SQL service with API, CLI, and web UI"
requires-python = "~=3.12.0"
authors = [
  { name = "NL2SQL Team" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "fastapi~=0.110",
  "uvicorn~=0.29",
  "pydantic~=2.6",
  "pydantic-settings~=2.2",
  "sqlalchemy~=2.0",
  "aiosqlite~=0.19",
  "sqlglot~=23.0",
  "sqlfluff~=3.0",
  "typer~=0.12.3",
  "httpx~=0.27",
  "openai>=1.30,<2",
  "structlog~=24.1",
  "sse-starlette~=1.6",
  "arq~=0.25",
  "redis~=5.0",
  "python-multipart~=0.0.9",
  "aiofiles~=23.2",
  "jinja2~=3.1",
  "greenlet~=3.0",
  "rich~=13.7"
]

[project.optional-dependencies]
server = ["uvicorn[standard]"]

[project.scripts]
nl2sql = "nl2sql.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
  "pytest~=8.1",
  "pytest-asyncio~=0.23",
  "anyio~=4.3",
  "httpx~=0.27",
  "mypy~=1.8",
  "ruff~=0.3",
  "black~=24.3",
  "types-redis~=4.6.0.20240417",
  "pytest-cov~=5.0"
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "A", "N", "C4", "TID", "SIM", "ERA"]
ignore = ["E501"]

target-version = "py312"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
packages = ["nl2sql"]
plugins = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
